cc: Avoid line wrapping on info (date + login) area of title bar
If line wrapping is allowed, wrapping is applied before long titles
overflow. This leads to a taller title bar, which is both ugly and
breaks the layout of the task report page, which contains an iframe
that is sized to compensate for a specific title bar height.

--- a/src/softfab/styles/sw-factory.css
+++ b/src/softfab/styles/sw-factory.css
@@ -292,6 +292,7 @@ div.titlebar > div.title {
 }
 div.titlebar > div.info {
 	text-align: right;
+	white-space: nowrap;
 }
 
 div.linkbar {
